--- a/css/cartes-encheres.css
+++ b/css/cartes-encheres.css
@@ -1,3 +1,8 @@
+.categorie-carte{
+    display: flex;
+    justify-content: space-around;
+}
+
 .largeur-presentation{
     width: 100%;
     height: fit-content;
@@ -5,8 +10,7 @@
 }
 
 .presentation-cartes{
-    background-color: var(--Xiketic);
-    box-shadow: inset 4px 4px 4px rgba(0, 0, 0, 0.062);
+    box-shadow: inset 4px 4px 4px rgba(255, 255, 255, 0.062);
     border-radius: 15px;
     display: flex;
     align-items: center;
@@ -15,8 +19,9 @@
     height: 300px;
 }
 .article-base{
+    background-image:url('img/lettre.jpg');
+    box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.171);
     margin: 20px;
-    background-color: var(--Ivory);
     border-radius: 15px;
     min-width: 350px;
     height: 250px;
@@ -29,7 +34,7 @@
 
 .image-timbre{
     border-top-left-radius: 20px;
-    width: 175px;
+    min-width: none;width: 175px;
     height: 205px;
     object-fit: cover;
 }
@@ -42,5 +47,16 @@
     
 }
 
+.carte-droite{
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    margin: 10px;
+    width: 170px;
+    height: 190px;
+}
+ .carte-droite>h3{
+    align-self: center;
+ }
 
 
