--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+/*font imports*/
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,600&family=Zilla+Slab+Highlight:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Freehand&display=swap');
+
+/*css imports*/
 @import url("css/main.css");
 @import url("css/header.css");
 @import url("css/navigation-principal.css");
