debut de la banniere carrousel

--- a/style.css
+++ b/style.css
@@ -11,3 +11,4 @@
 @import url("css/barre-recherche.css");
 @import url("css/nav-notifications.css");
 @import url("css/cartes-encheres.css");
+@import url("css/banner.css");
