--- a/css/cartes-encheres.css
+++ b/css/cartes-encheres.css
@@ -38,15 +38,17 @@
 }
 
 .image-timbre{
-    border-top-left-radius: 20px;
-    min-width: none;
+    margin-top: 7px;
+    margin-left: 7px;
     width: 175px;
     height: 200px;
+    overflow-y: hidden;
     object-fit: cover;
 }
 
 .image-timbre>img{
-    width: 100%;
+    max-width:100%;
+    max-height:100%;
 }
 
 .bas-carte{
