le carrousel est termine

--- a/css/banner.css
+++ b/css/banner.css
@@ -1,8 +1,66 @@
 .carrousel{
+    margin-top: 100px;
     margin-left: 0;
     margin-right: 0;
+    overflow: hidden;
 }
 
 .carrousel{
+    position: relative;
     width:  100%;
+    object-fit: contain;
+}
+
+.carrousel>img{
+    width: 100%;
+    height: auto;
+}
+
+.banner-nav{
+    position: absolute;
+    top: 45%;
+}
+
+.banner-nav{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.banner-nav button{
+    background-color: var(--TransMediumCarmine);
+    padding: 5px;
+    border: none;
+    border-radius: 15px;
+}
+
+.banner-nav button:hover{
+    background-color: var(--HovMediumCarmine);
+}
+
+.action-horaire{
+    position: absolute;
+    top: 45%;
+    left: 46%;
+}
+
+.action-horaire button{
+    font-family: ;
+    padding: 10px;
+    margin: 10px;
+    background-color: rgba(250, 250, 250, 0.393);
+    border: 1px solid rgba(29, 29, 29, 0.596);
+    box-shadow: inset 0px 2px 2px 2px rgba(0, 0, 0, 0.087);
+}
+
+.action-horaire button:hover{
+    transition: 0.5s;
+    border-radius: 20px;
+    background-color: rgba(245, 245, 245, 0.724);
+}
+
+.action-horaire button:active{
+    transition: 0.1s;
+    border-radius: 20px;
+    background-color: var(--HovMediumCarmine);
 }
