--- a/style.css
+++ b/style.css
@@ -12,3 +12,4 @@
 @import url("css/nav-notifications.css");
 @import url("css/cartes-encheres.css");
 @import url("css/banner.css");
+@import url("css/boites-liens.css");
