--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,12 @@ h1{
   font-size: 40px;
 }
 
+h2{
+  font-family: 'Times New Roman', Times, serif;
+  color: rgba(0, 0, 0, 0.623);
+  font-size: 70px;
+}
+
 h3{
   font-family: 'Freehand', cursive;
   font-size: 20px;
