--- a/style.css
+++ b/style.css
@@ -13,3 +13,4 @@
 @import url("css/cartes-encheres.css");
 @import url("css/banner.css");
 @import url("css/boites-liens.css");
+@import url("css/footer.css");
