--- a/css/cartes-encheres.css
+++ b/css/cartes-encheres.css
@@ -47,6 +47,9 @@
 }
 
 .image-timbre>img{
+    cursor: -moz-zoom-in; 
+    cursor: -webkit-zoom-in; 
+    cursor: zoom-in;
     max-width:100%;
     max-height:100%;
 }
