Page de fiche recommencé... la loupe sur l'image fonctionne

--- a/css/banner.css
+++ b/css/banner.css
@@ -28,9 +28,10 @@
 }
 
 .banner-nav button{
-    background-color: var(--TransMediumCarmine);
-    padding: 5px;
+    background-color: var(--TransMediumCarmine);    
     border: none;
+    margin: 10px;
+    padding: 5px;
     border-radius: 15px;
 }
 
