--- a/css/variables.css
+++ b/css/variables.css
@@ -7,13 +7,16 @@
     --Xiketic: #211A26;
     --BlueRYB: #364bdf;
 
+   
+
     /*Hover colors*/
     --HovMediumCarmine: #c75353;
     --HovBlueRYB: #4e59ad;
 
     /*transparance*/
     --TransBlueRYB: #364adfaf;
-    --TransMediumCarmine: #b93c3c7c;
+    --TransMediumCarmine: #b93c3c7c; 
+    --GrisTrans: rgba(128, 128, 128, 0.199);
 
     
   }
