--- a/css/loupe.css
+++ b/css/loupe.css
@@ -2,16 +2,18 @@
 
 * {box-sizing: border-box;}
 
-.article-infos {
+.infos-carte-img {
   position: relative;
 }
 
 .img-magnifier-glass {
   position: absolute;
-  border: 3px solid #000;
+  border: 5px solid rgba(0, 0, 0, 0.253);
   border-radius: 50%;
   cursor: none;
   /*Set the size of the magnifier glass:*/
-  width: 100px;
-  height: 100px;
+  width: 125px;
+  height: 125px;
 }
+
+/*https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_image_magnifier_glass*/
