--- a/style.css
+++ b/style.css
@@ -16,3 +16,7 @@
 @import url("css/footer.css");
 @import url("css/carte-info.css");
 @import url("css/loupe.css");
+
+
+/*Associé avec fonctions Js*/
+@import url("css/loupe.css");
