--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
 @import url("css/footer.css");
 @import url("css/carte-info.css");
 @import url("css/loupe.css");
+@import url("css/bouton.css");
 
 
 /*Associé avec fonctions Js*/
