--- a/css/carte-info.css
+++ b/css/carte-info.css
@@ -1,6 +1,7 @@
 .infos-carte-boite{
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
     justify-content: space-around;
 }
 
@@ -9,7 +10,7 @@
     background-color: var(--Xiketic);
     max-width: 325px;
     min-width: 325px;
-    height: auto;
+    height: 400px;
     object-fit: cover;
     overflow: hidden;
 }
@@ -48,9 +49,9 @@
 }
 
 .infos-carte-text{
-    background-color: var(--GrisTrans);
     padding: 10px;
-    min-width: 600px;    
+    width: 600px;
+    min-width: 400px;    
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -58,7 +59,7 @@
 
 .infos-carte-text>div{
     width: 100%;
-    height: 25%;
+    height: fit-content;
 }
 
 .infos-carte-bas{
@@ -71,4 +72,23 @@
     border-right: 2px solid var(--GrisTrans);
     height: 100%;
     width: 24%;
+}
+
+.infos-carte-prix{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.infos-carte-prix>div{
+    display: flex;
+    align-items: center;
+}
+
+.infos-carte-bas>div{
+    min-width: 250px;
+}
+
+.infos-carte-bas .badge{
+    display: flex;
 }
