--- a/css/variables.css
+++ b/css/variables.css
@@ -15,7 +15,8 @@
 
     /*transparance*/
     --TransBlueRYB: #364adfaf;
-    --TransMediumCarmine: #b93c3c7c; 
+    --TransMediumCarmine: #b93c3c7c;
+    --TransXiketic: #211a26e1;
     --GrisTrans: rgba(128, 128, 128, 0.199);
 
     
