--- a/css/bouton.css
+++ b/css/bouton.css
@@ -64,3 +64,33 @@
     background-color: var(--HovMediumCarmine);
 }
 
+/*les boutons de navigation des images banniere et header carrousel*/
+
+.banner-nav button{
+    background-color: var(--TransMediumCarmine);    
+    border: none;
+    z-index: 3;
+    margin: 10px;
+    padding: 5px;
+    border-radius: 15px;
+}
+
+.banner-nav button:hover{
+    background-color: var(--HovMediumCarmine);
+}
+
+/*boites liens boutons*/
+.boite-lien>button{
+    background-color: rgba(0, 0, 0, 0.5);
+    font-size: 20px;
+    height: 100%;
+    width: 100%;
+    border: none;
+    font-weight: bold;
+    color: white;
+}
+
+.boite-lien>button:hover{
+    background-color: var(--TransXiketic);
+    transition: 0.6s;
+}
