--- a/css/carte-info.css
+++ b/css/carte-info.css
@@ -76,8 +76,8 @@
 
 .infos-carte-prix{
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .infos-carte-prix>div{
@@ -86,6 +86,9 @@
 }
 
 .infos-carte-bas>div{
+    padding: 10px;
+    overflow: scroll;
+    height: 150px;
     min-width: 250px;
 }
 
