--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@
 @import url("css/carte-info.css");
 @import url("css/loupe.css");
 @import url("css/bouton.css");
+@import url("css/main-header.css");
+@import url("css/vendeur.css");
 
 
 /*Associé avec fonctions Js*/
