--- a/css/boutons.css
+++ b/css/boutons.css
@@ -1,12 +1,16 @@
-/*bouton d'action sur le banner*/
+/*bouton d'action sur la banniere*/
 
 .action-btn{
     position: absolute;
     top: 45%;
     left: 46%;
+    width: 250px;
 }
 
 .action-btn button{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     padding: 10px;
     margin: 10px;
     background-color: rgba(250, 250, 250, 0.393);
@@ -93,4 +97,66 @@
 .boite-lien>button:hover{
     background-color: var(--TransXiketic);
     transition: 0.6s;
+}
+
+/* les boutons sur les arcticles d'acceuil*/
+
+.btn-article-acceuil{
+    display: flex;
+    justify-content: center;
+}
+
+.btn-article-acceuil > button{
+    min-width: 175px;
+    max-width: 175px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.btn-article-acceuil button{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+    margin: 10px;
+    background-color: rgba(250, 250, 250, 0.393);
+    border: 1px solid rgba(29, 29, 29, 0.596);
+    box-shadow: inset 0px 2px 2px 2px rgba(0, 0, 0, 0.087);
+}
+
+.btn-article-acceuil button:hover{
+    transition: 0.5s;
+    border-radius: 20px;
+    background-color: rgba(245, 245, 245, 0.724);
+}
+
+.btn-article-acceuil button:active{
+    transition: 0.1s;
+    border-radius: 20px;
+    background-color: var(--HovMediumCarmine);
+}
+
+/*bouton sur les cartes d'encheres*/
+.article-base button{
+    background-color: inherit;
+    border-radius: 15px;
+    border: none;
+}
+
+.article-base button:hover{
+    transition: 0.5s;
+    background-color: var(--TransMediumCarmine);
+}
+
+/*bouton sur l'infolettre*/
+.infolettre-courriel button{
+    background-color: inherit;
+    border-radius: 20px;
+    border: none;
+}
+
+.infolettre-courriel > button:hover{
+    transition: 0.5s;
+    background-color: var(--TransMediumCarmine);
 }
