--- a/style.css
+++ b/style.css
@@ -16,9 +16,11 @@
 @import url("css/footer.css");
 @import url("css/carte-info.css");
 @import url("css/loupe.css");
-@import url("css/bouton.css");
+@import url("css/boutons.css");
 @import url("css/main-header.css");
-@import url("css/vendeur.css");
+@import url("css/article-acceuil.css");
+@import url("css/infolettre.css");
+@import url("css/article-journalier.css");
 
 
 /*Associé avec fonctions Js*/
