profinement de labonnement infolettre. changement de son champ input pour faire comme s'il y avait une ecriture a la main

--- a/css/boites-liens.css
+++ b/css/boites-liens.css
@@ -21,6 +21,11 @@
     object-fit: contain;
 }
 
+/*Changement de direction des liens de la page d'acceuil*/
+.liens-rapides-acceuil{
+    flex-direction: row-reverse;
+}
+
 .boite-lien{
     height: 125px;
     width: 170px;
