--- a/css/article-journalier.css
+++ b/css/article-journalier.css
@@ -25,8 +25,9 @@
 
 .article-du-jour > .article-journalier-titre{
     display: flex;
-    align-items: center;
-    justify-content: space-around;
+    align-items: baseline;
+    justify-content: space-between;
+    margin-bottom: 10px;
 }
 
 .article-journalier-btn{
@@ -51,4 +52,11 @@
 
 .article-journalier-img > img{
     width: 100%;
+}
+
+.titre-auteur{
+    display: flex;
+    flex-direction: column;
+    align-items: unset;
+
 }
