--- a/css/boutons.css
+++ b/css/boutons.css
@@ -177,6 +177,26 @@
   }
 
   .btn-primary{
-    border: none;
-    background-color: inherit;
+    border: 1px solid black;
+    background-color: rgba(250, 250, 250, 0.393);
+    box-shadow: inset 0px 2px 2px 2px rgba(0, 0, 0, 0.087);
+  }
+
+  .btn-primary:hover{
+    transition: 0.5s;
+    border-radius: 20px;
+    background-color: rgba(245, 245, 245, 0.724);
+  }
+
+  .btn-primary:active{
+    transition: 0.1s;
+    border-radius: 20px;
+    background-color: var(--HovMediumCarmine);
+  }
+
+  .modal-footer > button{
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
