--- a/css/infolettre.css
+++ b/css/infolettre.css
@@ -26,14 +26,17 @@
 }
 
 .infolettre-courriel > input[type=text]{
-    border-radius: 15px;
+    font-family: 'Caveat', cursive;
+    font-size: 23px;
+    text-align: end;
+    outline: none;
     border: none;
-    box-shadow: inset 2px 2px 2px rgba(0, 0, 0, 0.150);
-    background-color: var(--Ivory);
-    padding-left: 25px;
-    padding-right: 50px;
-    min-width: 300px;
-    height: 30px;
+    border-bottom: 1px solid black;
+    background-color: inherit;
+    padding-left: 10px;
+    padding-right: 20px;
+    min-width: 375px;
+    height: 35px;
 }
 
 .infolettre-courriel{
