--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Freehand&family=Pacifico&display=swap');
+
 body{
     margin: 0;
     width: 100%;
@@ -84,3 +86,12 @@ button{
   ::-webkit-scrollbar-thumb:hover {
     background: var(--HovMediumCarmine); 
   }
+
+  /*Champs imputs*/
+  input[type=text]:focus {
+    background-color: inherit;
+  }
+
+  input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0px 1000px white inset;
+}
