--- a/css/popup-bid.css
+++ b/css/popup-bid.css
@@ -68,7 +68,7 @@
   padding: 1rem;
   background-color: #ffffff;
   color: #333;
-  border-top: 1px solid #e9ecef;
+  border-top: 1px solid #f8f8f8;
   border-bottom-left-radius: 0.3rem;
   border-bottom-right-radius: 0.3rem;
   text-align: right;
@@ -76,6 +76,7 @@
 
 .modal-footer>small{
   width: 75%;
+  text-align: left;
 }
 
 #number{
