le css principal des boutons d'action est rassemble

--- a/css/main.css
+++ b/css/main.css
@@ -93,5 +93,5 @@ button{
   }
 
   input:-webkit-autofill {
-    -webkit-box-shadow: 0 0 0px 1000px white inset;
+    -webkit-box-shadow: 0 0 0px 1000px rgb(243, 221, 180) inset;
 }
