--- a/css/article-acceuil.css
+++ b/css/article-acceuil.css
@@ -8,13 +8,16 @@
     margin-bottom: 50px;
     padding: 20px;
     width: 30%;
-    min-height: 300px;
-    max-height: 300px;
+    min-height: fit-content;
+    max-height: min-content;
 }
 
 .article-acceuil > .article-txt{
-    padding-right: 10px;
     min-height: 175px;
     max-height: 175px;
     overflow: hidden;
+}
+
+.article-txt > p{
+    text-overflow: ellipsis;
 }
