--- a/css/boutons.css
+++ b/css/boutons.css
@@ -1,33 +1,11 @@
 /*bouton d'action sur la banniere*/
 
-.action-btn{
-    position: absolute;
-    top: 45%;
-    left: 46%;
-    width: 250px;
-}
-
 .action-btn button{
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 10px;
     margin: 10px;
-    background-color: rgba(250, 250, 250, 0.393);
-    border: 1px solid rgba(29, 29, 29, 0.596);
-    box-shadow: inset 0px 2px 2px 2px rgba(0, 0, 0, 0.087);
-}
-
-.action-btn button:hover{
-    transition: 0.5s;
-    border-radius: 20px;
-    background-color: rgba(245, 245, 245, 0.724);
-}
-
-.action-btn button:active{
-    transition: 0.1s;
-    border-radius: 20px;
-    background-color: var(--HovMediumCarmine);
 }
 
 
@@ -49,37 +27,20 @@
 
 .infos-carte-btn-action>button{
     width: 175px;
-    padding: 10px;
-    margin: 10px;
-    background-color: rgba(250, 250, 250, 0.393);
-    border: 1px solid rgba(29, 29, 29, 0.596);
-    box-shadow: inset 0px 2px 2px 2px rgba(0, 0, 0, 0.087);
-}
-
-.infos-carte-btn-action>button:hover{
-    transition: 0.5s;
-    border-radius: 20px;
-    background-color: rgba(245, 245, 245, 0.724);
-}
-
-.infos-carte-btn-action>button:active{
-    transition: 0.1s;
-    border-radius: 20px;
-    background-color: var(--HovMediumCarmine);
 }
 
 /*les boutons de navigation des images banniere et header carrousel*/
 
-.banner-nav button{
+.banner-nav .btn-arrow{
     background-color: var(--TransMediumCarmine);    
     border: none;
     z-index: 3;
     margin: 10px;
     padding: 5px;
-    border-radius: 15px;
+    border-radius: 20px;
 }
 
-.banner-nav button:hover{
+.banner-nav .btn-arrow:hover{
     background-color: var(--HovMediumCarmine);
 }
 
@@ -120,21 +81,6 @@
     justify-content: space-between;
     padding: 10px;
     margin: 10px;
-    background-color: rgba(250, 250, 250, 0.393);
-    border: 1px solid rgba(29, 29, 29, 0.596);
-    box-shadow: inset 0px 2px 2px 2px rgba(0, 0, 0, 0.087);
-}
-
-.btn-article-acceuil button:hover{
-    transition: 0.5s;
-    border-radius: 20px;
-    background-color: rgba(245, 245, 245, 0.724);
-}
-
-.btn-article-acceuil button:active{
-    transition: 0.1s;
-    border-radius: 20px;
-    background-color: var(--HovMediumCarmine);
 }
 
 /*bouton sur les cartes d'encheres*/
@@ -176,27 +122,29 @@
     cursor: pointer;
   }
 
-  .btn-primary{
-    border: 1px solid black;
-    background-color: rgba(250, 250, 250, 0.393);
-    box-shadow: inset 0px 2px 2px 2px rgba(0, 0, 0, 0.087);
-  }
-
-  .btn-primary:hover{
-    transition: 0.5s;
-    border-radius: 20px;
-    background-color: rgba(245, 245, 245, 0.724);
-  }
-
-  .btn-primary:active{
-    transition: 0.1s;
-    border-radius: 20px;
-    background-color: var(--HovMediumCarmine);
-  }
-
   .modal-footer > button{
     height: 30px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+  }
+
+  /* btns d'actions - tout les boutons d'actions qui ont le meme apparence */
+
+  .btns-actions{
+    border: 1px solid black;
+    background-color: rgba(250, 250, 250, 0.393);
+    box-shadow: inset 0px 2px 2px 2px rgba(0, 0, 0, 0.087);
+  }
+
+  .btns-actions:hover{
+    transition: 0.5s;
+    border-radius: 20px;
+    background-color: rgba(245, 245, 245, 0.724);
+  }
+
+  .btns-actions:active{
+    transition: 0.1s;
+    border-radius: 20px;
+    background-color: var(--HovMediumCarmine);
   }
