--- a/css/footer.css
+++ b/css/footer.css
@@ -1,15 +1,33 @@
 footer{
-    position: relative;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
     margin:0;
     margin-top: 100px;
     background-color: var(--Xiketic);
     height: 250px;
 }
 
+footer>.footer-droite{
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-between;
+}
+
+footer>.footer-centre{
+    display: flex;
+    gap: 200px;
+}
+
+footer>.footer-gauche{
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+}
+
 .footer-logo{
-    position: absolute;
-    bottom: 0px;
-    right: 0px;
     width: 150px;
     height: 150px;
     object-fit: contain;
@@ -21,8 +39,6 @@ footer{
 }
 
 .nav-social{
-    position: absolute;
-    right: 0px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -32,15 +48,22 @@ footer{
 
 }
 
-.select-langue{
-    position: absolute;
-    margin-left: 10px;
-    bottom: 80px;
-}
-
 .select-langue select{
     border-radius: 15px;
     width: 100px;
     height: 25px;
     background-color: var(--Ivory);
 }
+
+.footer-el{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.footer-bas{
+    padding: 5px;
+    background-color: var(--MaximumBluePurple);
+    text-align: center;
+}
+
