--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,11 @@ h5{
   font-size: 14px;
 }
 
+h6{
+  font-family: 'Times New Roman', Times, serif;
+  color: white;
+}
+
 pre{
   font-size: 15px;
 }
@@ -57,6 +62,16 @@ pre{
 p{
   font-family: 'Times New Roman', Times;
   font-size: 16px;
+}
+
+span{
+  color: white;
+}
+
+span>a{
+  font-size: 12px;
+  text-decoration: none;
+  color: white;
 }
 
 button{
