--- a/css/boutons.css
+++ b/css/boutons.css
@@ -133,6 +133,7 @@
 
   .btns-actions{
     border: 1px solid black;
+    padding: 10px;
     background-color: rgba(250, 250, 250, 0.393);
     box-shadow: inset 0px 2px 2px 2px rgba(0, 0, 0, 0.087);
   }
