--- a/css/cartes-encheres.css
+++ b/css/cartes-encheres.css
@@ -66,10 +66,11 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    text-overflow: ellipsis;
     margin-left: 10px;
     margin-right: 10px;
     width: 170px;
-    height: 190px;
+    height: 200px;
 }
  .carte-droite>h3{
     align-self: center;
