--- a/css/footer.css
+++ b/css/footer.css
@@ -16,7 +16,9 @@ footer>.footer-droite{
 
 footer>.footer-centre{
     display: flex;
-    gap: 200px;
+    justify-content: space-evenly;
+    min-width: 250px;
+    gap: 100px;
 }
 
 footer>.footer-gauche{
